--- a/MakeUsChallenge/app/src/main/res/values/colors.xml
+++ b/MakeUsChallenge/app/src/main/res/values/colors.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
+    <color name="colorPrimaryDark">#707070</color>
     <color name="colorAccent">#03DAC5</color>
+
+    <color name="pale_salmon">#ffc38f</color>
+    <color name="charcoal_grey">#3a3f45</color>
+    <color name="warm_grey">#707070</color>
 </resources>
