--- a/MakeUsChallenge/app/src/main/res/layout/activity_splash.xml
+++ b/MakeUsChallenge/app/src/main/res/layout/activity_splash.xml
@@ -4,16 +4,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#373c42"
+    android:orientation="vertical"
     tools:context=".src.splash.SplashActivity">
 
 
-    <TextView
-        android:text="스플래시"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <ImageView
+        android:src="@drawable/tutoroadlogo"
+        android:id="@+id/splash_icon"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"/>
-
 </androidx.constraintlayout.widget.ConstraintLayout>
