--- a/MakeUsChallenge/app/src/main/res/layout/activity_look_text.xml
+++ b/MakeUsChallenge/app/src/main/res/layout/activity_look_text.xml
@@ -1,9 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="@color/charcoal_grey"
     android:layout_height="match_parent"
     tools:context=".src.main.looktext.LookTextActivity">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="55.3dp"
+        android:background="#2e2e36"
+        android:gravity="center_horizontal"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_gravity="center_vertical"
+            android:text="글 보기"
+            android:textSize="17.3dp"
+            android:textColor="#ffffff"
+            android:layout_marginRight="100.3dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+        <ImageView
+            android:layout_gravity="center_vertical"
+            android:src="@drawable/ic_icon_detailed"
+            android:layout_width="27dp"
+            android:layout_height="7dp"/>
+    </LinearLayout>
+
+
+
+</LinearLayout>
