--- a/MakeUsChallenge/app/src/main/res/layout/activity_main.xml
+++ b/MakeUsChallenge/app/src/main/res/layout/activity_main.xml
@@ -18,6 +18,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:menu="@menu/menu_bottom"
+        android:background="@color/charcoal_grey"
         android:layout_gravity="bottom"/>
 
 
