--- a/MakeUsChallenge/app/src/main/res/layout/activity_pick.xml
+++ b/MakeUsChallenge/app/src/main/res/layout/activity_pick.xml
@@ -5,15 +5,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="#3a3f45"
-    tools:context=".src.login.select.SelectActivity">
-
-
+    android:background="@color/charcoal_grey"
+    tools:context=".src.pick.PickActivity">
 
     <ImageView
-        android:id="@+id/pick"
         android:src="@drawable/pick"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
+
 
 </LinearLayout>
