--- a/MakeUsChallenge/app/src/main/res/menu/menu_bottom.xml
+++ b/MakeUsChallenge/app/src/main/res/menu/menu_bottom.xml
@@ -2,12 +2,12 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/navigation_menu1"
-        android:icon="@android:drawable/ic_menu_call"
+        android:icon="@android:drawable/ic_menu_search"
         android:title="MENU1" />
 
     <item
         android:id="@+id/navigation_menu2"
-        android:icon="@android:drawable/ic_menu_camera"
+        android:icon="@android:drawable/ic_menu_search"
         android:title="MENU2" />
 
     <item
